<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imgPlayerAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_avatar"
        android:src="@drawable/ic_avatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvPlayerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/player_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/score_" />

            <TextView
                android:id="@+id/tvPlayerScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:background="@color/light_gray"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imgPlayerDisc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/player_disc"
                    android:padding="10dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvBomb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#F00"
                android:padding="1dp"
                android:text="@string/bomb"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvReplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#F00"
                android:padding="1dp"
                android:text="@string/replace"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
