<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imgPlayerAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_avatar"
        android:src="@drawable/ic_avatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvPlayerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/player_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/score_" />

            <TextView
                android:id="@+id/tvPlayerScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
