<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/reversi_logo"
        android:src="@drawable/ic_reversi_logo" />

    <LinearLayout
        android:id="@+id/llMainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:minWidth="223dp"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/btnMainOffline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/play_offline"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnMainOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:enabled="false"
            android:text="@string/play_online"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnMainOnline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:enabled="false"
            android:text="@string/play_online_3"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
