<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llWaitingRoomPlayerLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPlayerAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/player_avatar"
            android:src="@drawable/ic_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/player_name" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/light_gray"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imgPlayerDisc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/player_disc"
                    android:padding="10dp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@color/black" />

        <CheckBox
            android:id="@+id/cbPlayerReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="?android:attr/listChoiceIndicatorSingle"
            android:checked="false"
            android:clickable="false"
            android:contentDescription="@string/waiting___"
            android:longClickable="false"
            android:maxWidth="50dp"
            android:maxHeight="50dp" />
    </LinearLayout>
</FrameLayout>
